--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+        an error<br />
+        Check The Frontend Console
       </p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
